--- a/Travel.css
+++ b/Travel.css
@@ -1,1 +1,31 @@
-
+body {
+            background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Angkor_Wat.jpg/1280px-Angkor_Wat.jpg" );
+            background-size: cover;
+  background-repeat:no-repeat;
+  background-position: center center;
+        }
+        h1{
+            color: rgb(0, 4, 120);
+        }
+        h2{
+            color: rgb(0, 43, 255);
+        }
+        h3{
+            color: rgb(255, 230, 0);
+        }
+        ol{
+           color: rgb(255, 0, 255);
+        }
+        .CommonInformation{
+            color: rgb(189, 189, 189);
+        }
+        }
+        .Top3AmazingPlaces1{
+            color: rgb(255, 0, 255);
+        }
+        .Top3AmazingPlaces2{
+            color: rgb(255, 255, 255);
+        }
+        .Animals{
+            color: rgb(255, 255, 255);
+        }
