--- a/Travel.css
+++ b/Travel.css
@@ -1,8 +1,9 @@
         body {
             background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Angkor_Wat.jpg/1280px-Angkor_Wat.jpg" );
             background-size: cover;
-  background-repeat:no-repeat;
-  background-position: center center;
+            background-repeat:no-repeat;
+            background-position: center center;
+            text-align:right;    
         }
         h1{
             color: rgb(0, 4, 120);
